2023-08-01T00:44:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5721170977 # 1776
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-01
* notice: last 14d: unq all: 10 34
* notice: prev accum: outdated-unq outdated-all / unq all: 324 1350 / 335 1387
* notice: next accum: outdated-unq outdated-all / unq all: 325 1353 / 335 1387
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-17] / []

2023-07-30T16:07:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5707163084 # 1772
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 11 37
* notice: prev accum: outdated-unq outdated-all / unq all: 323 1342 / 335 1387
* notice: next accum: outdated-unq outdated-all / unq all: 324 1350 / 335 1387
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-16] / []

2023-07-30T00:41:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5703321792 # 1770
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: last 14d: unq all: 12 45
* notice: prev accum: outdated-unq outdated-all / unq all: 323 1342 / 334 1385
* notice: next accum: outdated-unq outdated-all / unq all: 323 1342 / 335 1387
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +8 -0 -0 / 2 8
* notice: removed / changed dates: [] / [2023-07-29]

2023-07-29T16:07:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5701329277 # 1769