@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-01T00:44:43Z",
+  "timestamp" : "2023-08-01T08:09:18Z",
   "count_outdated" : 1353,
   "uniques_outdated" : 325,
-  "count" : 1387,
-  "uniques" : 335,
+  "count" : 1398,
+  "uniques" : 337,
   "views" : [
     {
       "timestamp": "2023-07-19T00:00:00Z",
@@ -66,6 +66,15 @@
       "count_decinc": [ 0, 8 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-08-01T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
     }
   ]
