@@ -1,6 +1,6 @@
 {
-  "count": 34,
-  "uniques": 10,
+  "count": 45,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2023-07-19T00:00:00Z",
@@ -35,6 +35,11 @@
     {
       "timestamp": "2023-07-29T00:00:00Z",
       "count": 8,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-08-01T00:00:00Z",
+      "count": 11,
       "uniques": 2
     }
   ]
