@@ -1,3 +1,12 @@
+2023-08-01T08:09:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5724243811 # 1777
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-01
+* notice: last 14d: unq all: 12 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 325 1353 / 335 1387
+* notice: next accum: outdated-unq outdated-all / unq all: 325 1353 / 337 1398
+* notice: prev exec diff / last date diff / accum: unq all: +2 +11 -0 -0 / +2 +11 -0 -0 / 2 11
+* notice: removed / changed dates: [] / [2023-08-01]
+
 2023-08-01T00:44:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5721170977 # 1776
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-01
